# regtech-test-files

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: backend_usage_examples.ipynb  example.py  example_mock_data.csv  example_spec.yaml
sbl_demo/: fake_data.csv  main.py  sbl.yaml
sbl_demo/custom_backends/: MultipleResponse.py  __init__.py
sbl_demo/mock_data/: MockDataset.py
sbl_demo/mock_data/backends/: AbstractBackendInterface.py  BoundedDatetime.py  BoundedNumerical.py  LoremIpsumText.py  WeightedDiscrete.py  __init__.py
sbl_demo/mock_data/backends/resources/: loremipsum.txt
src/mock_data/: __init__.py
tests/mock_data/: test_MockDataset.py
tests/mock_data/backends/: test_BoundedDatetime.py  test_BoundedNumerical.py  test_LoremIpsumText.py  test_WeightedDiscrete.py
