[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyMockDataGen"
version = "0.0.1"
description = "Framework for generating mock datasets"
readme = "README.md"
maintainers = [
  {name = "Ethan Bienstock", email = "ethan.bienstock@cfpb.gov" } 
]
license = { text = "MIT" }
 
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
keywords = ["Data", "Mock Data", "SBL", "HMDA",]
 
dependencies = [ "scipy", "pandas", "pytest"]
 
requires-python = ">=3.9"